--- a/projeto-travessia/src/styles.scss
+++ b/projeto-travessia/src/styles.scss
@@ -1,3 +1,5 @@
+
+@import '../node_modules/font-awesome/css/font-awesome.css';
 /* You can add global styles to this file, and also import other style files */
 body {
     background-color: #e6f7ff; /* Ou qualquer outra cor desejada */
