teste componentes angular em diretório separado

--- a/projeto-travessia/src/styles.scss
+++ b/projeto-travessia/src/styles.scss
@@ -7,3 +7,5 @@ body {
     padding: 0; /* Remova preenchimentos para ocupar toda a tela */
   }
   
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
