--- a/projeto-travessia/src/app/routes/report-generator/report-generator.component.scss
+++ b/projeto-travessia/src/app/routes/report-generator/report-generator.component.scss
@@ -3,6 +3,15 @@
   display: flex;
   flex-direction: column;
 }
+
+.mat-margin {
+  margin: 0 10px;
+}
+
+.mat-card {
+  margin-bottom: 10px;
+}
+
 .div-2 {
   background-color: #2d717a;
   align-self: stretch;
