--- a/projeto-travessia-frontend/src/styles.scss
+++ b/projeto-travessia-frontend/src/styles.scss
@@ -1,1 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
+@import '~@angular/material/prebuilt-themes/pink-bluegrey.css';
+@import '../node_modules/font-awesome/css/font-awesome.css';
+
+body
+{
+    margin: 0px;
+    font-family: Roboto, "Helvetica Neue", sans-serif;
+}
