--- a/projeto-travessia-frontend/src/app/modules/generate-reports/generate-reports.component.html
+++ b/projeto-travessia-frontend/src/app/modules/generate-reports/generate-reports.component.html
@@ -8,9 +8,9 @@
         <div>
             <mat-form-field style="width: 296px">
                 <mat-label>Selecione a operação</mat-label>
-                <mat-select>
-                    <mat-option *ngFor="let food of foods" [value]="food.value">
-                        {{food.viewValue}}
+                <mat-select [(ngModel)]="selectedOperation">
+                    <mat-option *ngFor="let operation of operations" [value]="operation.value">
+                        {{operation.viewValue}}
                     </mat-option>
                 </mat-select>
             </mat-form-field>
@@ -18,9 +18,9 @@
         <div>
             <mat-form-field style="width: 296px">
                 <mat-label>Data de Fechamento</mat-label>
-                <input matInput [matDatepicker]="picker">
+                <input matInput [matDatepicker]="picker"  [(ngModel)]="selectedDate">
 
-                <mat-hint style="opacity: 0.20; color: #EEEEEE">MM/DD/YYYY</mat-hint>
+                <mat-hint style="opacity: 0.20; color: #EEEEEE">DD/MM/YYYY</mat-hint>
                 <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
                 <mat-datepicker #picker></mat-datepicker>
             </mat-form-field>
@@ -28,56 +28,39 @@
         <div class="attach-file-class">
             <input type="file" class="file-input" (change)="onFileSelected($event)" id="fileInput">
             <div class="file-upload" (click)="triggerFileInput()">
-                <b style="width: 219px; margin-right: 2vh; color: #FFFFFF99; font-weight:410;"> {{fileName? "Base selecionada!": "Selecione a base" }} </b>
+                <b style="width: 173px; margin-right: 2vh; color: #FFFFFF99; font-weight:410;"> {{fileName? "Base selecionada!": "Selecione a base" }} </b>
 
-                <!-- não apagar!!!!!!!! <button mat-fab extended color="primary" class="upload-btn">
-                    <mat-icon>attach_file</mat-icon>
-                </button> não apagar!!!!!!!!!! -->
-                <button mat-mini-fab color="primary" class="upload-btn">
+                <button mat-fab extended color="primary" color="accent" [disabled]="false" class="upload-btn">
                     <mat-icon>attach_file</mat-icon>
                 </button>
                 
             </div>
         </div>
-        <p style="opacity: 0.20; color: #EEEEEE; margin-top: -0.5vh">{{ fileName || "Nenhum arquivo foi selecionado..."}}</p>
+        <p style="opacity: 0.20; color: #EEEEEE; margin-top: -1.8vh; margin-right:2.4vh">{{ fileName || "Nenhum arquivo foi selecionado"}}</p>
+
+        <button [disabled] = "!fileName"
+        (click)="generateReport()"
+        mat-raised-button color="accent" 
+        style="margin-top: 4.5vh; width: 180px; height: 50px; font-size: 14px;">
+        {{fileName? "Gerar": "Aguardando Base..." }}
+        
+        </button>
 
         <div style="margin-top: 5vh;"class="attach-file-class">
-            <input type="file" class="file-input" (change)="onFileSelected($event)" id="fileInput">
-            <div class="file-upload" (click)="triggerFileInput()">
-                <b style="width: 219px; margin-right: 2vh; color: #FFFFFF99; font-weight:410;"> {{fileName? fileName : "Aguardando arquivo" }} </b>
+            <!-- <input type="file" class="file-input" (change)="onFileSelected($event)" id="fileInput"> -->
+            <div class="file-upload">
+                <b style="width: 173px; margin-right: 2vh; color: #FFFFFF99; font-weight:410;"> {{fileName? "Arquivo selecionado" : "Aguardando arquivo" }} </b>
 
-                <button mat-mini-fab color="primary" class="download-btn">
-                    <mat-icon>download_file</mat-icon>
+                <button mat-fab extended color="primary" color="accent" 
+                [disabled]="!reportGenerated"
+                (click)="downloadReport()" [ngClass]="{'link': reportGenerated}"
+                class="download-btn">
+                    <mat-spinner *ngIf="isGenerating" color="accent" style="width: 3vh; height: 3vh;"></mat-spinner>
+                    <mat-icon *ngIf="!isGenerating">download_file</mat-icon>
                 </button>
                 
             </div>
         </div>
+        <p *ngIf="!fileName" style="opacity: 0.20; color: #EEEEEE; margin-top: -1.8vh; margin-right:2.4vh">Nenhum arquivo foi selecionado</p>
     </div>
 </div>
-
-
-<!-- <div>
-    <button style="background-color: aqua;" mat-button> Botao </button>
-    <button mat-raised-button class="custom-accent-button"> Botao </button>
-    <button mat-flat-button> Botao </button>
-    <button mat-stroked-button> Botao </button>
-
-</div>
-
-<div>
-    <mat-spinner></mat-spinner>
-</div> -->
-
-
-<!-- <input type="file" class="file-input"
-       (change)="onFileSelected($event)" #fileUpload>
-
-<div class="file-upload">
-
-   {{fileName || "No file uploaded yet."}}
-
-    <button mat-mini-fab color="primary" class="upload-btn"
-      (click)="fileUpload.click()">
-        <mat-icon>attach_file</mat-icon>
-    </button>
-</div> -->
