--- a/projeto-travessia-frontend/src/app/modules/components/header/header.component.scss
+++ b/projeto-travessia-frontend/src/app/modules/components/header/header.component.scss
@@ -28,11 +28,10 @@
 }
 
 .header .logo {
-    display: flex;
     position: fixed;
-    margin-top: -4.5vh;
-    margin-left: 14vh;
-    max-height: 38px;
+    margin-top: -0.7%;
+    margin-left: 4%;
+    max-height: 8%;
 }
 
 .header .title-group a{ 
