--- a/projeto-travessia-frontend/src/app/modules/generate-reports/generate-reports.component.scss
+++ b/projeto-travessia-frontend/src/app/modules/generate-reports/generate-reports.component.scss
@@ -1,17 +1,21 @@
 .container {
-    height: 200%;
+    height: 500%;
+    width: 100%;
+    position: auto;
+    overflow-y: auto;
     margin: 0;
     padding: 0; 
     background-color: #222831;
 }
 .body {
-    // background-color: #ac1d88;
-    // background-color: #222831;
-    display: flex;
+    background-color: antiquewhite;
+    margin-top: 10%;
     justify-content: center;
     flex-direction: column;
     align-items: center !important;
-    height: 100vh;
+    
+    height: 80%;
+    width: 80%;
 }
 .body div p{
     font-weight:700;
@@ -30,8 +34,9 @@
 }
 .attach-file-class{
     box-shadow: -5px 0 5px -5px rgba(0, 0, 0, 0.5), 5px 0 5px -5px rgba(0, 0, 0, 0.5);
-    max-height: 6.6vh;
+    max-height: 10vh;
     background-color: #4A4A4A;
+    width: 100vh;
     margin: 0;
     padding: 0;
     border-top-left-radius: 5px;
