Implemented nested routes on project

--- a/projeto-travessia-frontend/src/app/components/login/login.component.html
+++ b/projeto-travessia-frontend/src/app/components/login/login.component.html
@@ -1,5 +1,4 @@
 <body class="mat-typography">
-    <router-outlet></router-outlet>
     <p>INSERIR LOGIN AQUI</p>
-    <a routerLink="/report">Ir para a nova rota</a>
+    <button (click)="login()">Login</button>
 </body>
