initial login html scss

--- a/projeto-travessia-frontend/src/app/components/login/login.component.html
+++ b/projeto-travessia-frontend/src/app/components/login/login.component.html
@@ -1,4 +1,31 @@
-<body class="mat-typography">
-    <p>INSERIR LOGIN AQUI</p>
-    <button (click)="login()">Login</button>
-</body>
+<div class="wrapper vertical-center login absolute">
+    <div class="block-center mt-xl wd-xl">
+        <div style="margin: -10px">
+            <!-- INSERIR LOADER -->
+        </div>
+    </div>
+</div>
+
+<div class="wrapper vertical-center login">
+    <div class="block-center mt-xl wd-xl">
+        <div class="panel panel-flat">
+            <div class="panel-heading text-center">
+                <a href="">
+                    <img class="block-center img-rounded" src="assets/img/travessia-logo.png" alt="Travessia">
+                </a>
+            </div>
+            <div class="panel-body">
+                <p class="text-center pv">SIGN IN TO CONTINUE</p>
+                <div class="text-center">
+                    <div class="row">
+                        <input type="text" class="text-center">
+                    </div>
+                    <div class="row">
+                        <input type="text" class="text-center">
+                    </div>
+                    <button class="btn btn-block btn-primaty mt-lg">Login</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
