--- a/projeto-travessia-frontend/src/app/components/login/login.component.html
+++ b/projeto-travessia-frontend/src/app/components/login/login.component.html
@@ -1,10 +1,10 @@
-<div class="wrapper vertical-center login absolute">
+<!-- <div class="wrapper vertical-center login absolute">
     <div class="block-center mt-xl wd-xl">
         <div style="margin: -10px">
-            <!-- INSERIR LOADER -->
+           
         </div>
     </div>
-</div>
+</div> -->
 
 <div class="wrapper vertical-center login">
     <div class="block-center mt-xl wd-xl">
