--- a/projeto-travessia-frontend/src/app/components/header/header.component.scss
+++ b/projeto-travessia-frontend/src/app/components/header/header.component.scss
@@ -5,17 +5,18 @@
     display: flex;
     position: fixed;
     align-items: center;
-    background-color: #222831;
+    // background-color: #222831;
+    background-color: #393E46;
     justify-content: space-between;
 }
 .header.transicao1{
-    background-color: #282E37;
-}
-.header.transicao2{
     background-color: #31363F;
 }
+.header.transicao2{
+    background-color: #282E37;
+}
 .header.ativo{
-    background-color: #393E46;
+    background-color: #222831;
     box-shadow: 0 4px 4px rgba(0, 0, 0, 0.2);
 
 }
