solving file save problems and adding Alerts

--- a/projeto-travessia-frontend/src/app/components/header/header.component.html
+++ b/projeto-travessia-frontend/src/app/components/header/header.component.html
@@ -4,7 +4,7 @@
 
 <mat-toolbar class="header">
     <span>
-        <i class="material-symbols-outlined">
+        <i (click) = "aviso()" class="material-symbols-outlined">
             menu
         </i>
         <a>
@@ -19,10 +19,10 @@
         </a> -->
     </span>
     <span class="icon-group">
-        <i class="material-icons">
+        <i (click) = "aviso()" class="material-icons">
             dashboards
         </i>
-        <i class="material-symbols-outlined">
+        <i (click) = "aviso()" class="material-symbols-outlined">
             person
         </i> 
     </span>
